--- a/lib/todo.txt
+++ b/lib/todo.txt
@@ -1,22 +1,19 @@
-Assets:
-- Pillar
-- Spikes
-
-Mechanisms
-- Player push back
+Mechanisms:
+- Enhance the transition between PlayScreen and ScoreScreen.
+- Background music.
+- Implement environment music (such as collect coin or explode bomb).
 
 Screens:
-- Final Screen
+- ScoreScreen
     - Best score
     - Current score
-    - Play again button
-    - Main menu button
+- PlayScreen
+    - Pause button
+        - End game
+        - Disable/Enable Music
+- Menu Screen
 
-Others:
-- Refine the image assets
-- Resize the assets to use 9x16 ratios
+Story:
 - Implement a catchy story
+- Implement a mechanism to loop forever the final part of the story.
 
-After release ideas:
-- Implement a settings screen
-- Implement sounds (e.g. collect coin, explosion) and music
